--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+:root {
+  --primary-color: #8F1515;
+  --secondary-color: #201221;
+  --bg-color-1: #F68834;
+  --bg-color-2: #F68834;
+  --bg-color-3: #EBE4D2;
+  --bg-color-4: #FFFFFF;
+
+  --font-color-1: #FFFFFF;
+  --font-color-1: #000000;
+
+  --font-light: 300;
+  --font-regular: 500;
+  --font-Bold: 700;
+
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Inria Serif", serif;
 }
+
+
