--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,16 +4,15 @@
   --primary-color: #8F1515;
   --secondary-color: #201221;
   --bg-color-1: #F68834;
-  --bg-color-2: #F68834;
-  --bg-color-3: #EBE4D2;
-  --bg-color-4: #FFFFFF;
+  --bg-color-2: #EBE4D2;
+  --bg-color-3: #FFFFFF;
 
   --font-color-1: #FFFFFF;
   --font-color-2: #000000;
 
   --font-light: 300;
   --font-regular: 500;
-  --font-Bold: 700;
+  --font-bold: 700;
 
 }
 
