--- a/client/src/Componets/Home page/Header.css
+++ b/client/src/Componets/Home page/Header.css
@@ -212,11 +212,12 @@ body {
 /* ================================================================================= */
 .header_content {
     padding: 20px;
+    display: flex;
+    justify-content: center;
 }
 
 .content {
-    width: 90%;
-    margin-left: 5%;
+    width: 80%;
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
