added image hover effect and about section

--- a/client/src/Componets/Home page/Header.css
+++ b/client/src/Componets/Home page/Header.css
@@ -334,22 +334,32 @@ body {
     z-index: 3; /* Place on top */
     left: 16%; /* Center horizontally */
     top: -5%; /* Adjust for layering */
+    transition: 400ms;
+}
+
+.img_right-1:hover {
+    transform: scale(1.2);
 }
 
 .img_right-2 {
     z-index: 1; /* Place behind img_right-1 */
-    right: 30%; /* Center horizontally */
+    right: 20%; /* Center horizontally */
     top: 25%; /* Adjust for layering */
+    transition: 400ms;
+}
+
+.img_right-2:hover {
+    transform: scale(1.2);
 }
 
 .empty_left {
     position: absolute;
-    width: 220px;
+    width: 260px;
     height: 400px;
-    background-color: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.2);
     filter: blur(2px);
     top: 40%;
-    left: 42%;
+    left: 50%;
     border-radius: 0px 20px 20px 20px;
     transform: translate(-50%, -50%); /* Center the blob */
     z-index: 2; /* Place behind images */
