--- a/client/src/Componets/Home page/PopularDishes.css
+++ b/client/src/Componets/Home page/PopularDishes.css
@@ -1,5 +1,4 @@
 .popular__dishes-container {
-    background-color: goldenrod;
     padding: 2rem;
     display: flex;
     justify-content: center;
@@ -7,6 +6,7 @@
 
 .popular__dishes-wrapper {
     width: 80%;
+    padding: 10px;
 }
 
 .popilar__dishes-heading {
@@ -26,15 +26,15 @@
 .dishes__container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 1rem; 
+    gap: 3rem; 
 }
 
 .card {
-    max-width: 300px;
-    border-radius: 0.5rem;
-    background-color: #fff;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-    border: 1px solid transparent;
+    width: 350px;
+    /* border-radius: 0.5rem; */
+    background-color: #fffbfb;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0);
+    Border-bottom: solid 2px;
     transition: transform 0.3s;
 }
 
@@ -44,15 +44,28 @@
 
 .card__content {
     padding: 1.1rem;
+    text-align: left;
 }
 
 .card__img {
     object-fit: cover;
     width: 100%;
-    height: 150px;
+    height: 160px;
     background-color: rgb(239, 205, 255);
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
+}
+
+.card__rate,
+.card__title,
+.card__price {
+    color: var(--primary-color);
+}
+
+.card__ratings {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .card__description {
@@ -62,10 +75,15 @@
     line-height: 1.25rem;
 }
 
-.card__price .price {
+.card__bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card__price {
     font-weight: bold;
-    color: #000;
-    font-size: 1rem;
+    font-size: 1.4rem;
 }
 
 .card__btn {
@@ -75,8 +93,9 @@
     border: none;
     border-radius: 0.25rem;
     cursor: pointer;
+    transition: 400ms ease-in-out;
 }
 
 .card__btn:hover {
-    background-color: #ff4500;
+    background-color: var(--secondary-color);
 }
