--- a/client/src/Componets/Home page/About.css
+++ b/client/src/Componets/Home page/About.css
@@ -16,6 +16,7 @@
 .about__title {
     font-size: 4rem;
     font-style: italic;
+    padding-bottom: 15px;
 }
 
 .about__content {
@@ -35,8 +36,8 @@
     width: 400px;
     height: 400px;
     border-radius: 200px;
-    top: -1%;
-    right: 9%;
+    top: -8%;
+    right: 7%;
     z-index: 1;
 }
 
@@ -46,7 +47,7 @@
     width: 400px;
     height: 400px;
     border-radius: 200px;
-    top: 111%;
+    top: 105%;
     z-index: 0;
 }
 
@@ -62,7 +63,8 @@
     border-left: solid var(--bg-color-1) 7px;
     border-radius: 20px;
     padding: 15px;
-    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .about__text {
@@ -75,6 +77,7 @@
     display: flex;
     gap: 15px;
     font-size: 1rem;
+    padding-top: 20px;
 }
 
 .ratings,
@@ -84,8 +87,10 @@
     padding: 5px;
     border-radius: 10px;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    height: 110px;
+    padding: 6px;
 }
 
 .about_icon {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
 }
